--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
     <h2>Navigation</h2>
     <ul>
         <li><a href = "/cpsc349-project1/index.html">Home</a></li>
-        <li><a href = "/cpsc349-project1/aboutus.html">About Us</a></li>
+        <li><a href = "aboutus.html">About Us</a></li>
     </ul>
     <h3>Description</h3>
 
