--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@ pagination:
   size: 1
   alias: photo
 eleventyComputed:
-    permalink: "/cpsc349-project1/photos/{{ photo.id }}/"
+    permalink: "/photos/{{photo.id}}/"
     title: "{{ photo.alt }}"
 ---
 
